name:                cuti
version:             0.0.0.0
synopsis:            Web API for holiday pay (annual leave)
description:         Please see README.md
homepage:            https://github.com/kusut/cuti#readme
license:             GPL-3
license-file:        LICENSE
author:              kusut
maintainer:          tinokusut@gmail.com
copyright:           2016 kusut
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , servant-server
                     , time
  default-language:    Haskell2010

executable cuti-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , cuti
                     , monad-logger
                     , persistent-postgresql
                     , warp
  default-language:    Haskell2010

test-suite cuti-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cuti
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kusut/cuti
